# NiceGui-Windows-Base

./: .gitignore  .markdownlint.json  CHANGELOG.md  LICENSE  NiceGui Hello World.code-workspace  NiceGui Windows Base.code-workspace  README.md  app.py  dev_run.py  pyproject.toml  requirements.txt  settings.toml
docs/: README.md  architecture.md  code_quality.md  development_environment.md  execution_modes.md  first_run_checklist.md  logging.md  native_window_persistence.md  packaging_windows.md  powershell_execution_policy.md  python_windows_setup.md  release_automation.md  runtime_support.md  settings.md  state.md  template_customization.md  troubleshooting.md  ui_shell.md  vscode_setup.md
scripts/: clean_project.ps1  customize_template.py  package_windows.ps1  prepare_release.py  version_info.txt
src/desktop_app/: __init__.py  __main__.py  app.py  constants.py  settings.toml
src/desktop_app/application/: __init__.py  bootstrap.py  diagnostics.py  log_reader.py  preferences.py  run_options.py  runtime_context.py  status.py
src/desktop_app/core/: __init__.py  runtime.py  state.py
src/desktop_app/infrastructure/: __init__.py  asset_paths.py  byte_size.py  file_system.py  lifecycle.py  native_window_state.py  splash.py
src/desktop_app/infrastructure/logger/: README.md  __init__.py  bootstrapper.py  byte_size.py  config.py  defaults.py  exceptions.py  handlers.py  paths.py  service.py  validators.py
src/desktop_app/infrastructure/native_window_state/: README.md  __init__.py  arguments.py  assignment.py  bridge.py  defaults.py  events.py  geometry.py  models.py  persistence.py  service.py
src/desktop_app/infrastructure/settings/: __init__.py  constants.py  conversion.py  diagnostics.py  document.py  logging_helpers.py  mapper.py  paths.py  schema.py  service.py  toml_document.py
src/desktop_app/project_tools/: __init__.py  common.py  release_automation.py  template_customization.py
src/desktop_app/ui/: __init__.py  layout.py  main_page.py  router.py  theme.py
src/desktop_app/ui/components/: __init__.py  cards.py  feedback.py  navigation.py  page.py
src/desktop_app/ui/pages/: __init__.py  components.py  diagnostics.py  index.py  logs.py  not_found.py  routes.py  settings.py  status.py
src/nicegui_hello_world/: __init__.py  __main__.py  app.py
src/nicegui_windows_base/: __main__.py  app.py
tests/: test_app.py  test_constants.py  test_desktop_app_main.py  test_dev_run.py
tests/application/: test_bootstrap.py  test_diagnostics.py  test_log_reader.py  test_preferences.py  test_run_options.py  test_runtime_context.py  test_status.py
tests/core/: test_core_init.py  test_runtime.py  test_state.py
tests/infrastructure/: test___init__.py  test_asset_paths.py  test_byte_size.py  test_file_system.py  test_lifecycle.py  test_native_window_state.py  test_native_window_state_package.py  test_splash.py
tests/infrastructure/logger/: test___init___.py  test_bootstrapper.py  test_byte_size.py  test_config.py  test_defaults.py  test_exceptions.py  test_handlers.py  test_package_boundaries.py  test_paths.py  test_service.py  test_validators.py
tests/infrastructure/native_window_state/: conftest.py  test_arguments.py  test_events.py  test_geometry.py  test_package.py  test_persistence.py  test_service.py
tests/infrastructure/settings/: test___init__.py  test_conversions.py  test_mapper.py  test_paths.py  test_schema.py  test_service.py  test_toml_document.py
tests/project_tools/: test_project_tools_init.py  test_release_automation.py  test_template_customization.py
tests/ui/: test_main_page.py  test_pages_and_router.py
