[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nicegui-hello-world"
version = "0.1.0"
description = "A Hello World template for NiceGUI projects."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { file = "LICENSE" }
authors = [
    { name = "NiceGUI Hello World contributors" }
]
dependencies = [
    "nicegui",
    "pywebview"
]

[project.optional-dependencies]
dev = [
    "ruff"
]
packaging = [
    "pyinstaller"
]

[project.scripts]
nicegui-hello-world = "nicegui_hello_world.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py313"
src = ["src"]
extend-exclude = [
    ".venv",
    "build",
    "dist"
]

[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "I",
    "SIM",
    "UP"
]

[tool.ruff.format]
docstring-code-format = true
line-ending = "auto"
quote-style = "double"

[tool.setuptools.package-data]
nicegui_hello_world = ["assets/*.ico"]
