[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nicegui-windows-base"
version = "0.3.4"
description = "A Windows base template for NiceGUI applications."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { file = "LICENSE" }
authors = [{ name = "NiceGui Windows Base contributors" }]
dependencies = ["nicegui>=3.11", "pywebview", "tomlkit>=0.13"]

[project.optional-dependencies]
dev = ["coverage[toml]>=7.10", "pytest>=8.0", "pytest-cov>=6.0", "ruff"]
packaging = ["pyinstaller>=6.0"]

[project.scripts]
nicegui-windows-base = "desktop_app.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py313"
src = ["src"]
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]

[tool.ruff.format]
docstring-code-format = true
line-ending = "auto"
quote-style = "double"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
	"-ra",
	"--strict-config",
	"--strict-markers",
	"--import-mode=importlib",
]


[tool.coverage.run]
branch = true
source = ["desktop_app"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_also = [
	"if TYPE_CHECKING:",
	"if __name__ == .__main__.:",
	"raise NotImplementedError",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.setuptools.package-data]
desktop_app = ["assets/*.ico", "assets/*.png", "assets/*.svg", "settings.toml"]
